--- a/main.css
+++ b/main.css
@@ -11,15 +11,15 @@ body{
 
 img
 {
-    width: 500px;
-    height: 500px;
+    width: 20vw;
+    height: 20vw;
     object-fit: cover;
 }
 
 .btn
 {
-    width: 200px;
-    padding: 10px;
+    width: 10vw;
+    padding: 1vw;
     border: 5px solid #fff;
     border-radius: 10px;
     display: block;
@@ -28,13 +28,13 @@ img
 
 .main_btn
 {
-    width: 200px;
-    padding: 10px;
+    width: 10vw;
+    padding: 1vw;
     border: 5px solid #fff;
     border-radius: 10px;
     display: block;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 2%;
     cursor: pointer;
 }
 
@@ -49,7 +49,7 @@ header h1
 {
     color: rgb(255, 11, 92);
     text-shadow: 3px 3px 1px #fff;
-    font-size: 60px;
+    font-size: 2.8vw;
 }
 /* main */
 main
@@ -74,7 +74,7 @@ section
 p
 {
     color: #fff;
-    font-size: 40px;
+    font-size: 2.5vw;
     text-align: center;
 
 }
@@ -89,9 +89,9 @@ section.active
 
 section .q
 {
-    font-size: 32px;
+    font-size: 2.5vw;
     color: black;
-    margin-bottom: 20px;
+    margin-bottom: 2%;
 }
 
 section > div 
@@ -126,8 +126,8 @@ section > div
 /* btn */
 .btn2
 {
-    width: 400px;
-    padding: 10px;
+    width: 10vw;
+    padding: 1%;
     border: 5px solid #fff;
     border-radius: 10px;
     display: block;
@@ -167,7 +167,7 @@ section#15
 
 .adj_img
 {
-    height: 500px;
+    height: 25vw;
     object-fit: cover;
 }
 
