--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ img
 
 .btn
 {
-    width: 10vw;
+    width: 20vw;
     padding: 1vw;
     border: 5px solid #fff;
     border-radius: 10px;
@@ -28,7 +28,7 @@ img
 
 .main_btn
 {
-    width: 10vw;
+    width: 20vw;
     padding: 1vw;
     border: 5px solid #fff;
     border-radius: 10px;
@@ -36,6 +36,11 @@ img
     text-align: center;
     margin-top: 2%;
     cursor: pointer;
+}
+
+h4
+{
+    font-size: 2.5vw;
 }
 
 /* header */
@@ -49,7 +54,7 @@ header h1
 {
     color: rgb(255, 11, 92);
     text-shadow: 3px 3px 1px #fff;
-    font-size: 2.8vw;
+    font-size: 3vw;
 }
 /* main */
 main
@@ -74,7 +79,7 @@ section
 p
 {
     color: #fff;
-    font-size: 2.5vw;
+    font-size: 3.5vw;
     text-align: center;
 
 }
@@ -89,7 +94,7 @@ section.active
 
 section .q
 {
-    font-size: 2.5vw;
+    font-size: 3vw;
     color: black;
     margin-bottom: 2%;
 }
@@ -126,7 +131,7 @@ section > div
 /* btn */
 .btn2
 {
-    width: 10vw;
+    width: 20vw;
     padding: 1%;
     border: 5px solid #fff;
     border-radius: 10px;
