--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ img
 
 h4
 {
-    font-size: 2.5vw;
+    font-size: 2vw;
 }
 
 /* header */
@@ -79,7 +79,7 @@ section
 p
 {
     color: #fff;
-    font-size: 3.5vw;
+    font-size: 3vw;
     text-align: center;
 
 }
@@ -94,9 +94,10 @@ section.active
 
 section .q
 {
-    font-size: 3vw;
+    font-size: 2.5vw;
     color: black;
     margin-bottom: 2%;
+    font-weight: bold;
 }
 
 section > div 
@@ -185,4 +186,55 @@ section#15
 {
     background-color: rgb(255, 128, 170);
     cursor: pointer;
+}
+
+
+@media (max-width: 768px) {
+
+  /* 텍스트 크기 키우기 */
+  h1 {
+    font-size: 6vw;
+  }
+
+  h4 {
+    font-size: 4vw;
+  }
+
+  p, .q {
+    font-size: 4.5vw;
+  }
+
+  /* 버튼 크기 키우기 */
+  .btn, .main_btn, .btn2 {
+    width: 60vw;
+    padding: 3vw;
+  }
+
+  /* 이미지 크기 키우기 */
+  img, .adj_img {
+    width: 60vw;
+    height: auto;
+  }
+
+  /* 선택지 정렬 세로로 변경 */
+  .selection {
+    flex-direction: column;
+    align-items: center;
+    gap: 4vw;
+  }
+
+  .selection > div {
+    margin-right: 0;
+    width: 70vw;
+  }
+
+  /* section 고정 layout 깨짐 방지 */
+  section {
+    position: relative;
+    left: auto;
+    transform: none;
+    width: 100%;
+    padding-top: 5vh;
+  }
+
 }
